--- a/package.json
+++ b/package.json
@@ -37,6 +37,10 @@
     "@angular/platform-browser": "~9.1.7",
     "@angular/platform-browser-dynamic": "~9.1.7",
     "@angular/router": "~9.1.7",
+    "@capacitor/android": "^2.4.7",
+    "@capacitor/cli": "^2.4.7",
+    "@capacitor/core": "^2.4.7",
+    "@capacitor/ios": "^2.4.7",
     "@ionic-native/core": "^5.26.0",
     "@ionic-native/device": "^5.26.0",
     "@ionic-native/splash-screen": "^5.26.0",
