--- a/package.json
+++ b/package.json
@@ -7,21 +7,19 @@
   "private": true,
   "scripts": {
     "clean": "rm -rf www node_modules platforms plugins package-lock.json .sourcemaps",
-    "clean:install": "npm run clean && npm i && ionic cordova prepare",
-    "verify": "~/Library/Android/sdk/build-tools/29.0.3/zipalign -v 4 platforms/android/app/build/outputs/apk/release/app-release-unsigned.apk cluedtv.apk",
-    "sign": "jarsigner -verbose -sigalg SHA1withRSA -digestalg SHA1 -keystore cluedtv-release-key.keystore platforms/android/app/build/outputs/apk/release/app-release-unsigned.apk clued_tv",
-    "build": "ionic build",
+    "clean:install": "npm run clean && npm i",
+    "build": "ionic build && ionic cap sync",
     "build:web": "ionic build --prod",
-    "build:prod": "ionic build --prod && ionic cordova build ios --prod && ionic cordova build android --prod --release",
-    "build:dev": "ionic build && ionic cordova build ios && ionic cordova build android",
-    "build:ios:prod": "ionic cordova build ios --prod",
-    "build:ios": "ionic cordova prepare ios",
-    "build:android:prod": "ionic cordova build android --prod --release && npm run sign && npm run verify",
-    "build:android": "ionic cordova prepare android",
+    "build:prod": "ionic build --prod && ionic cap sync ios --prod && ionic cap sync android --prod",
+    "build:dev": "ionic build && ionic cap sync ios && ionic cap sync android",
+    "build:ios:prod": "ionic cap sync ios --prod",
+    "build:ios": "ionic cap sync ios",
+    "build:android:prod": "ionic cap sync android --prod",
+    "build:android": "ionic cap sync android",
     "deploy": "npm run build && firebase deploy",
     "deploy:prod": "npm run build:web && firebase deploy -P production",
-    "ios": "ionic cordova run ios --consolelogs -l --emulator --native-run --connect --address=0.0.0.0",
-    "android": "ionic cordova run android --debug --consolelogs -l",
+    "ios": "ionic cap run ios -l --external",
+    "android": "ionic cap run android -l --consolelogs --external",
     "start": "ionic serve -o",
     "prettier": "prettier --config ./.prettierrc.json --write \"./**/*.{js,ts,json,md,scss,component.html,page.html}\"",
     "lint:ts:fix": "ng lint --format stylish --fix",
@@ -79,7 +77,7 @@
     "cordova-plugin-ionic-keyboard": "^2.2.0",
     "husky": "^4.2.5",
     "lint-staged": "^10.2.4",
-    "prettier": "^2.0.5",
+    "prettier": "^2.2.1",
     "ts-node": "~8.6.2",
     "tslint": "^6.1.2",
     "tslint-config-prettier": "^1.18.0",
